<resources>
    <string name="app_name">fat-measurements-mobile</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- custome -->
    <string name="brand_name">FatMeasurement</string>

    <string name="account_name">账号</string>
    <string name="account_pwd">密码</string>
    <string name="account_head_portrait">头像</string>
    <string name="account_signature">签名</string>

    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="forget_pwd_prompt"><u>忘记密码？</u></string>
    <string name="register_prompt"><u>新用户注册</u></string>
    <string name="login_prompt">登录即代表阅读并同意服务条款</string>

    <string name="user_name_placeholder">请输入用户名</string>
    <string name="user_pwd_placeholder">请输入密码</string>
    <string name="pwd_affirm_placeholder">请确认密码</string>

    <string name="user_name_prompt">用户名由0–25位数字，英文、中文字符组成</string>
    <string name="user_pwd_prompt">密码由0–30位数字，英文字符组成</string>
    <string name="pwd_affirm_prompt">点击注册即表示同意《软件许可及服务协议》</string>
    <string name="user_name_blank_prompt">用户名不能为空</string>
    <string name="user_pwd_blank_prompt">密码不能为空</string>
    <string name="pwd_different_prompt">两次输入的密码不一致</string>
    <string name="next_step">下一步</string>

    <string name="nav_user">我</string>
    <string name="nav_data">数据</string>
    <string name="nav_account">账户</string>
    <string name="nav_setting">设置</string>
    <string name="nav_default_personal_signature">写一句话记录你的心情吧~</string>
    <string name="nav_default_user_name">未命名用户</string>
    <string name="custom_title_back"><![CDATA[< 返回]]></string>

    <string name="pic_from_storage">从相册选择</string>
    <string name="pic_from_camera">拍照</string>
    <string name="pic_from_cancel">取消</string>
    <string name="save_edit_user_info">保存</string>
    <string name="log_out">退出登录</string>
    <string name="setting_theme">主题</string>
    <string name="setting_feed_back">反馈</string>
    <string name="more"><![CDATA[>]]></string>
    <string name="setting_about">关于fat_measurement</string>
    <string name="setting_cleanup_cache">清除缓存</string>
    <string name="setting_push">消息推送</string>
    <string name="publish_time"><u>发布时间</u>∨</string>
    <string name="variety"><u>品种</u>∨</string>
    <string name="measure_finish">已测量</string>
    <string name="sort">排序</string>
    <string name="variety2">品种</string>
    <string name="animal_id">动物编号</string>
    <string name="animal_weight_prompt">动物体重，单位为kg</string>
    <string name="save_draft">保存</string>
    <string name="measure">测量</string>
    <string name="add">+</string>
    <string name="file_name">文件名</string>
    <string name="fat_balance_rank">脂肪均匀等级</string>

    <string name="measure_result_format"><Data><![CDATA[%1$s<font color="#00574B"><i>%2$s</i></font>]]></Data></string>

</resources>
