<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/brand_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@mipmap/brand_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name"
            android:textColor="@color/colorBlack"
            android:textSize="25dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interaction"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.23">

        <!-- 账号输入控件 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/account_name"
                android:textColor="@color/colorBlack"
                android:gravity="center"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:theme="@style/MyEditText"
                android:id="@+id/account_input"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:id="@+id/img_head_portrait"
                android:src="@mipmap/default_head_portrait_backup"/>

        </LinearLayout>

        <!--密码输入控件-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/account_pwd"
                android:textColor="@color/colorBlack"
                android:gravity="center"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="10sp"
                android:theme="@style/MyEditText"
                android:id="@+id/pwd_input"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/img_show_pwd"
                android:src="@mipmap/close_eyes"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/interaction"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/forget_pwd_prompt"
            android:textColor="@color/colorBlue2"
            android:layout_alignParentStart="true"
            android:id="@+id/forgot_pwd_intent"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/register_prompt"
            android:textColor="@color/colorBlue2"
            android:layout_alignParentEnd="true"
            android:id="@+id/register_intent"
            android:focusable="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        />


</android.support.constraint.ConstraintLayout>