<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MeasureActivity">

    <chenfeihao.com.fat_measurements_mobile.custom.layout.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:id="@+id/measure_custom_title">
    </chenfeihao.com.fat_measurements_mobile.custom.layout.TitleLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/measure_custom_title"
        android:theme="@style/MyEditText"
        android:id="@+id/measure_animal_id"
        android:textColorHint="@color/colorGray1"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="10sp"
        android:textSize="15sp"
        android:hint="@string/animal_id"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/measure_animal_id"
        android:entries="@array/variety"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:id="@+id/measure_animal_variety"
        android:layout_marginBottom="10sp"
        android:theme="@style/itemSpinnerStyle2">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        app:layout_constraintTop_toBottomOf="@id/measure_animal_variety"
        android:background="#B5B5B5" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/measure_animal_variety"
        android:entries="@array/sex"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:id="@+id/measure_animal_sex"
        android:layout_marginBottom="10sp"
        android:theme="@style/itemSpinnerStyle2">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        app:layout_constraintTop_toBottomOf="@id/measure_animal_sex"
        android:background="#B5B5B5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/measure_animal_sex"
        android:theme="@style/MyEditText"
        android:id="@+id/measure_animal_weight"
        android:textColorHint="@color/colorGray1"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="10sp"
        android:textSize="15sp"
        android:hint="@string/animal_weight_prompt"/>

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:layout_constraintTop_toBottomOf="@id/measure_animal_weight"
        app:layout_constraintLeft_toLeftOf="@id/measure_animal_weight"
        android:id="@+id/measure_b_ultrasound"
        android:layout_margin="5sp"/>

    <TextView
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:layout_constraintTop_toBottomOf="@id/measure_animal_weight"
        app:layout_constraintLeft_toRightOf="@+id/measure_b_ultrasound"
        android:layout_margin="5sp"
        android:id="@+id/measure_b_ultrasound_replace"
        android:background="#F0F0F0"
        android:text="@string/add"
        android:textColor="#DEDEDE"
        android:gravity="center"
        android:textSize="60sp"/>

    <TextView
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/measure_b_ultrasound"
        app:layout_constraintLeft_toLeftOf="@id/measure_b_ultrasound"
        android:textAlignment="center"
        android:id="@+id/measure_b_ultrasound_file_name"
        android:text="@string/file_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        android:layout_margin="5sp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/measure_save_draft"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/save_draft"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/measure_submit"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/measure"/>

    </LinearLayout>





</android.support.constraint.ConstraintLayout>