<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray1"
    tools:context=".activity.UserInformationActivity"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <chenfeihao.com.fat_measurements_mobile.custom.layout.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:id="@+id/setting_custom_title">
    </chenfeihao.com.fat_measurements_mobile.custom.layout.TitleLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/setting_custom_title"
        android:background="@color/colorWhite"
        android:id="@+id/setting_theme"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/setting_theme"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:id="@+id/setting_theme_text"
                android:theme="@style/MyEditText"
                android:text="测试"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/setting_theme"
        android:background="@color/colorWhite"
        android:id="@+id/setting_push"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/setting_push"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:id="@+id/setting_push_text"
                android:theme="@style/MyEditText"
                android:text="测试"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/setting_push"
        android:background="@color/colorWhite"
        android:id="@+id/setting_feedback"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/setting_feed_back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:text="@string/more"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorGray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/setting_about"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:id="@+id/alter_user_signature"
                android:text="@string/more"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/setting_feedback"
        android:background="@color/colorWhite"
        android:id="@+id/setting_cache"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:id="@+id/setting_cleanup_cache"
                android:clickable="true"
                android:text="@string/setting_cleanup_cache"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/setting_cache"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:id="@+id/setting_log_out"
                android:clickable="true"
                android:text="@string/log_out"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>