<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray1"
    tools:context=".activity.UserInformationActivity">

    <chenfeihao.com.fat_measurements_mobile.custom.layout.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:id="@+id/user_custom_title">
    </chenfeihao.com.fat_measurements_mobile.custom.layout.TitleLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/user_custom_title"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:id="@+id/user_basic_information">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:showDividers="middle|beginning|end"
            android:divider="@drawable/underline">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/account_name"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:id="@+id/alter_user_name"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/account_name"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:id="@+id/alter_user_signature"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/user_basic_information"
        android:background="@color/colorWhite"
        android:id="@+id/user_secret_information"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:driver="@drawable/underline">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/account_pwd"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:id="@+id/alter_user_pwd"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/user_secret_information"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:driver="@drawable/underline">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/account_head_portrait"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:id="@+id/alter_user_head_portrait"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>